rework CreditsScreens